cabal-version:      3.0

name:               aoc2024
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             david3141
build-type:         Simple

common basics
    default-language: Haskell2010
    other-modules: Paths_aoc2024
    ghc-options: -Wall

common dependencies
    build-depends:
        base ^>=4.17.2.1,
        array,
        containers,
        regex-applicative,
        split,
        timeit

data-dir:
    inputs

library
    import:
        basics, dependencies
    exposed-modules:
        Day23
        Day22
        Day21
        Day20
        Day19
        Day18
        Day17
        Day16
        Day15
        Day14
        Day13
        Day12
        Day11
        Day10
        Day09
        Day08
        Day07
        Day06
        Day05
        Day04
        Day03
        Day02
        Day01
        Helpers
        MatrixHelpers
    hs-source-dirs:
        src

executable aoc2024-exe
    import:
        basics, dependencies
    build-depends:
        aoc2024
    main-is:
        Main.hs
    hs-source-dirs:
        app
